style: fixed fab size and upload files alignment

--- a/src/features/files/components/create/create-button.css
+++ b/src/features/files/components/create/create-button.css
@@ -1,7 +1,7 @@
 .create-button {
     box-sizing: border-box;
-    width: 56px;
-    height: 56px;
+    width: 48px;
+    height: 48px;
     display: flex;
     align-items: center;
     justify-content: center;
